Adding firebase secrets json to github secrets

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -106,10 +106,10 @@ jobs:
           NODE_ENV=development
           EOF
 
-      - name: Create minimal test secrets directory
+      - name: Create secrets directory with Firebase service account
         run: |
           mkdir -p secrets
-          echo '{"type":"service_account","project_id":"test"}' > secrets/ezstack-service-account.json
+          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}' > secrets/ezstack-service-account.json
 
       - name: Start services for testing
         run: |
