--- a/apps/ezstack-site/Dockerfile
+++ b/apps/ezstack-site/Dockerfile
@@ -40,7 +40,7 @@ RUN npm run build
 
 FROM node:20-alpine AS runner
 WORKDIR /app
-ENV NODE_ENV=development \
+ENV NODE_ENV=production \
     NEXT_TELEMETRY_DISABLED=1 \
     PORT=3000
 
