--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -84,32 +84,65 @@ jobs:
           cache-from: type=registry,ref=${{ env.REGISTRY }}/ezauth:production
           cache-to: type=inline
 
-      - name: Create test environment file
-        run: |
-          cat > .env << EOF
-          PORT_EZSTACK=8080
-          PORT_EZAUTH=8081
-          REDIS_URL=redis://redis:6379
-          NEXT_PUBLIC_FIREBASE_API_KEY=test-key
-          NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=test.firebaseapp.com
-          NEXT_PUBLIC_FIREBASE_PROJECT_ID=test-project
-          NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=test.appspot.com
-          NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456
-          NEXT_PUBLIC_FIREBASE_APP_ID=test-app-id
-          FASTIFY_PUBLIC_APIKEY_PEPPER=test-pepper
-          EMAIL_FROM=test@example.com
-          EMAIL_DRY_RUN=true
-          OTP_DRY_RUN=true
-          NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
-          NEXT_PUBLIC_SITE_URL=http://localhost:3000
-          CORS_ORIGIN=http://localhost:3000
-          NODE_ENV=development
-          EOF
-
       - name: Create secrets directory with Firebase service account
         run: |
           mkdir -p secrets
           echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}' > secrets/ezstack-service-account.json
+
+      - name: Generate production environment file
+        run: |
+          # This .env file will be used for both testing and production deployment
+          cat > .env << EOF
+          # Service Ports
+          PORT_EZSTACK=${{ vars.PROD_PORT_EZSTACK }}
+          PORT_EZAUTH=${{ vars.PROD_PORT_EZAUTH }}
+          
+          # Redis
+          REDIS_URL=${{ vars.PROD_REDIS_URL }}
+          
+          # API Security
+          FASTIFY_PUBLIC_APIKEY_PEPPER=${{ secrets.PROD_FASTIFY_PUBLIC_APIKEY_PEPPER }}
+          APIKEY_CACHE_TTL_MS=30000
+          APIKEY_REDIS_TTL_SEC=60
+          AUTH_FAIL_SAFE_EZSTACK=true
+          AUTH_FAIL_SAFE_EZAUTH=true
+          
+          # Email & OTP
+          EMAIL_FROM=${{ vars.PROD_EMAIL_FROM }}
+          EMAIL_DRY_RUN=${{ vars.PROD_EMAIL_DRY_RUN }}
+          OTP_DRY_RUN=${{ vars.PROD_OTP_DRY_RUN }}
+          
+          # OTP/OTE Configuration
+          OTP_TTL_SECONDS=300
+          OTP_LENGTH=6
+          OTP_MAX_ATTEMPTS=5
+          OTE_TTL_SECONDS=300
+          OTE_LENGTH=6
+          OTE_MAX_ATTEMPTS=5
+          RESEND_COOLDOWN_SEC=30
+          DEST_PER_MINUTE=5
+          RATE_ROUTE_MAX=30
+          
+          # AWS Configuration
+          FASTIFY_PUBLIC_AWS_REGION=${{ vars.PROD_AWS_REGION }}
+          FASTIFY_PUBLIC_AWS_ACCESS_KEY_ID=${{ secrets.PROD_FASTIFY_PUBLIC_AWS_ACCESS_KEY_ID }}
+          FASTIFY_PUBLIC_AWS_SECRET_ACCESS_KEY=${{ secrets.PROD_FASTIFY_PUBLIC_AWS_SECRET_ACCESS_KEY }}
+          AWS_SES_ENDPOINT=
+          
+          # CORS
+          CORS_ORIGIN=${{ vars.PROD_CORS_ORIGIN }}
+          
+          # Next.js Environment
+          NODE_ENV=production
+          NEXT_PUBLIC_FIREBASE_API_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
+          NEXT_PUBLIC_FIREBASE_APP_ID=${{ vars.NEXT_PUBLIC_FIREBASE_APP_ID }}
+          NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=${{ vars.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
+          NEXT_PUBLIC_FIREBASE_PROJECT_ID=${{ vars.NEXT_PUBLIC_FIREBASE_PROJECT_ID }}
+          NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=${{ vars.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
+          NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=${{ vars.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
+          NEXT_PUBLIC_API_BASE_URL=${{ vars.NEXT_PUBLIC_API_BASE_URL }}
+          NEXT_PUBLIC_SITE_URL=${{ vars.NEXT_PUBLIC_SITE_URL }}
+          EOF
 
       - name: Start services for testing
         run: |
@@ -164,59 +197,37 @@ jobs:
           # Update docker-compose.prod.yaml to use production tag
           sed 's/:latest/:production/g' docker-compose.prod.yaml > docker-compose.prod.deploy.yaml
 
-      - name: Create production .env file from secrets
+      - name: Generate Cloudflared configuration
         if: success()
         run: |
-          cat > .env << EOF
-          # Service Ports
-          PORT_EZSTACK=${{ vars.PROD_PORT_EZSTACK }}
-          PORT_EZAUTH=${{ vars.PROD_PORT_EZAUTH }}
+          # Generate production cloudflared config from variables
+          # Template reference: config/cloudflared-config.template
+          cat > cloudflared-config.yml << EOF
+          tunnel: ${{ vars.CLOUDFLARE_TUNNEL_NAME }}
+          credentials-file: /root/.cloudflared/${{ vars.CLOUDFLARE_TUNNEL_ID }}.json
           
-          # Redis
-          REDIS_URL=${{ vars.PROD_REDIS_URL }}
-          
-          # API Security
-          FASTIFY_PUBLIC_APIKEY_PEPPER=${{ secrets.PROD_FASTIFY_PUBLIC_APIKEY_PEPPER }}
-          APIKEY_CACHE_TTL_MS=30000
-          APIKEY_REDIS_TTL_SEC=60
-          AUTH_FAIL_SAFE_EZSTACK=true
-          AUTH_FAIL_SAFE_EZAUTH=true
-          
-          # Email & OTP
-          EMAIL_FROM=${{ vars.PROD_EMAIL_FROM }}
-          EMAIL_DRY_RUN=${{ vars.PROD_EMAIL_DRY_RUN }}
-          OTP_DRY_RUN=${{ vars.PROD_OTP_DRY_RUN }}
-          
-          # OTP/OTE Configuration
-          OTP_TTL_SECONDS=300
-          OTP_LENGTH=6
-          OTP_MAX_ATTEMPTS=5
-          OTE_TTL_SECONDS=300
-          OTE_LENGTH=6
-          OTE_MAX_ATTEMPTS=5
-          RESEND_COOLDOWN_SEC=30
-          DEST_PER_MINUTE=5
-          RATE_ROUTE_MAX=30
-          
-          # AWS Configuration
-          FASTIFY_PUBLIC_AWS_REGION=${{ vars.PROD_AWS_REGION }}
-          FASTIFY_PUBLIC_AWS_ACCESS_KEY_ID=${{ secrets.PROD_FASTIFY_PUBLIC_AWS_ACCESS_KEY_ID }}
-          FASTIFY_PUBLIC_AWS_SECRET_ACCESS_KEY=${{ secrets.PROD_FASTIFY_PUBLIC_AWS_SECRET_ACCESS_KEY }}
-          AWS_SES_ENDPOINT=
-          
-          # CORS
-          CORS_ORIGIN=${{ vars.PROD_CORS_ORIGIN }}
-          
-          # Next.js Environment
-          NODE_ENV=production
-          NEXT_PUBLIC_FIREBASE_API_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
-          NEXT_PUBLIC_FIREBASE_APP_ID=${{ vars.NEXT_PUBLIC_FIREBASE_APP_ID }}
-          NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=${{ vars.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
-          NEXT_PUBLIC_FIREBASE_PROJECT_ID=${{ vars.NEXT_PUBLIC_FIREBASE_PROJECT_ID }}
-          NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=${{ vars.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
-          NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=${{ vars.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
-          NEXT_PUBLIC_API_BASE_URL=${{ vars.NEXT_PUBLIC_API_BASE_URL }}
-          NEXT_PUBLIC_SITE_URL=${{ vars.NEXT_PUBLIC_SITE_URL }}
+          # Ingress rules - order matters!
+          ingress:
+            # Main site
+            - hostname: ${{ vars.PROD_SITE_DOMAIN }}
+              service: http://localhost:3000
+              originRequest:
+                httpHostHeader: ${{ vars.PROD_SITE_DOMAIN }}
+            
+            # API service
+            - hostname: ${{ vars.PROD_API_DOMAIN }}
+              service: http://localhost:${{ vars.PROD_PORT_EZSTACK }}
+              originRequest:
+                httpHostHeader: ${{ vars.PROD_API_DOMAIN }}
+            
+            # Auth service  
+            - hostname: ${{ vars.PROD_AUTH_DOMAIN }}
+              service: http://localhost:${{ vars.PROD_PORT_EZAUTH }}
+              originRequest:
+                httpHostHeader: ${{ vars.PROD_AUTH_DOMAIN }}
+            
+            # Catch-all (required)
+            - service: http_status:404
           EOF
 
       - name: Copy files to server
@@ -225,11 +236,14 @@ jobs:
           # Copy docker-compose file
           scp docker-compose.prod.deploy.yaml ${{ env.DO_USER }}@${{ env.DO_HOST }}:/srv/ezstack/docker-compose.prod.yaml
           
-          # Copy .env file (was created from GitHub Secrets in previous step)
+          # Copy .env file (same file used for testing)
           scp .env ${{ env.DO_USER }}@${{ env.DO_HOST }}:/srv/ezstack/.env
           
-          # Copy secrets directory (was created from GitHub Secrets in previous step)
+          # Copy secrets directory
           scp -r ./secrets ${{ env.DO_USER }}@${{ env.DO_HOST }}:/srv/ezstack/
+          
+          # Copy cloudflared configuration
+          scp cloudflared-config.yml ${{ env.DO_USER }}@${{ env.DO_HOST }}:/srv/ezstack/cloudflared-config.yml
 
       - name: Deploy on server
         if: success()
@@ -275,12 +289,59 @@ jobs:
             fi
           EOF
 
+      - name: Update and restart Cloudflared tunnel
+        if: success()
+        run: |
+          ssh ${{ env.DO_USER }}@${{ env.DO_HOST }} << 'EOF'
+            cd /srv/ezstack
+            
+            echo "Updating Cloudflared tunnel configuration..."
+            
+            # Check if cloudflared service exists and stop it
+            if systemctl is-active --quiet cloudflared; then
+              echo "Stopping existing cloudflared service..."
+              systemctl stop cloudflared
+            fi
+            
+            # Update cloudflared to latest version
+            # echo "Updating cloudflared to latest version..."
+            # wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -O /usr/local/bin/cloudflared || true
+            # chmod +x /usr/local/bin/cloudflared
+            
+            # Validate the configuration
+            echo "Validating cloudflared configuration..."
+            cloudflared tunnel ingress validate --config /srv/ezstack/cloudflared-config.yml
+            
+            # Start or restart the tunnel
+            if systemctl is-enabled --quiet cloudflared; then
+              echo "Restarting cloudflared service..."
+              systemctl restart cloudflared
+            else
+              echo "Starting cloudflared tunnel..."
+              # Start in background (if no systemd service is configured)
+              nohup cloudflared tunnel --config /srv/ezstack/cloudflared-config.yml run > /var/log/cloudflared.log 2>&1 &
+            fi
+            
+            # Wait a moment for tunnel to start
+            sleep 5
+            
+            # Check tunnel status
+            if systemctl is-active --quiet cloudflared; then
+              echo "Cloudflared service is running"
+              systemctl status cloudflared --no-pager || true
+            else
+              echo "Cloudflared started in background mode"
+              ps aux | grep cloudflared | grep -v grep || echo "Warning: Could not verify cloudflared process"
+            fi
+          EOF
+
       - name: Send deployment notification
         if: success()
         run: |
           echo "Deployment successful! Version: ${{ steps.version.outputs.VERSION }}"
           echo "Images tagged with: production and ${{ steps.version.outputs.VERSION }}"
           echo "All services are running on production server."
+          echo "Cloudflared tunnel has been updated and restarted."
 
       - name: Send failure notification
         if: failure()
@@ -294,4 +355,3 @@ jobs:
         if: always()
         run: |
           rm -f ~/.ssh/id_rsa
-
