--- a/config/env.template
+++ b/config/env.template
@@ -1,30 +1,21 @@
-# Environment Variable Template
-# This file serves as documentation for the environment variables used in the project.
-# The actual .env file is generated in .github/workflows/deploy-production.yml
-# 
-# When adding new variables:
-# 1. Add them to this template for documentation
-# 2. Add them to .github/workflows/deploy-production.yml in the "Generate production environment file" step
-# 3. Add the corresponding GitHub Secrets/Variables in your repository settings
-
 # Service Ports
-PORT_EZSTACK=8080
-PORT_EZAUTH=8081
+PORT_EZSTACK=${{ vars.PROD_PORT_EZSTACK }}
+PORT_EZAUTH=${{ vars.PROD_PORT_EZAUTH }}
 
 # Redis
-REDIS_URL=redis://redis:6379
+REDIS_URL=${{ vars.PROD_REDIS_URL }}
 
 # API Security
-FASTIFY_PUBLIC_APIKEY_PEPPER=your-secret-pepper
+FASTIFY_PUBLIC_APIKEY_PEPPER=${{ secrets.PROD_FASTIFY_PUBLIC_APIKEY_PEPPER }}
 APIKEY_CACHE_TTL_MS=30000
 APIKEY_REDIS_TTL_SEC=60
 AUTH_FAIL_SAFE_EZSTACK=true
 AUTH_FAIL_SAFE_EZAUTH=true
 
 # Email & OTP
-EMAIL_FROM=noreply@example.com
-EMAIL_DRY_RUN=false
-OTP_DRY_RUN=false
+EMAIL_FROM=${{ vars.PROD_EMAIL_FROM }}
+EMAIL_DRY_RUN=${{ vars.PROD_EMAIL_DRY_RUN }}
+OTP_DRY_RUN=${{ vars.PROD_OTP_DRY_RUN }}
 
 # OTP/OTE Configuration
 OTP_TTL_SECONDS=300
@@ -38,22 +29,22 @@ DEST_PER_MINUTE=5
 RATE_ROUTE_MAX=30
 
 # AWS Configuration
-FASTIFY_PUBLIC_AWS_REGION=us-east-1
-FASTIFY_PUBLIC_AWS_ACCESS_KEY_ID=your-aws-access-key
-FASTIFY_PUBLIC_AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+FASTIFY_PUBLIC_AWS_REGION=${{ vars.PROD_AWS_REGION }}
+FASTIFY_PUBLIC_AWS_ACCESS_KEY_ID=${{ secrets.PROD_FASTIFY_PUBLIC_AWS_ACCESS_KEY_ID }}
+FASTIFY_PUBLIC_AWS_SECRET_ACCESS_KEY=${{ secrets.PROD_FASTIFY_PUBLIC_AWS_SECRET_ACCESS_KEY }}
 AWS_SES_ENDPOINT=
 
 # CORS
-CORS_ORIGIN=https://yourdomain.com
+CORS_ORIGIN=${{ vars.PROD_CORS_ORIGIN }}
 
 # Next.js Environment
 NODE_ENV=production
-NEXT_PUBLIC_FIREBASE_API_KEY=your-firebase-api-key
-NEXT_PUBLIC_FIREBASE_APP_ID=your-firebase-app-id
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789
-NEXT_PUBLIC_API_BASE_URL=https://api.yourdomain.com
-NEXT_PUBLIC_SITE_URL=https://yourdomain.com
+NEXT_PUBLIC_FIREBASE_API_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
+NEXT_PUBLIC_FIREBASE_APP_ID=${{ vars.NEXT_PUBLIC_FIREBASE_APP_ID }}
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=${{ vars.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=${{ vars.NEXT_PUBLIC_FIREBASE_PROJECT_ID }}
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=${{ vars.NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET }}
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=${{ vars.NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID }}
+NEXT_PUBLIC_API_BASE_URL=${{ vars.NEXT_PUBLIC_API_BASE_URL }}
+NEXT_PUBLIC_SITE_URL=${{ vars.NEXT_PUBLIC_SITE_URL }}
 
