Adding syntax highlighting to docs code examples

--- a/apps/ezstack-site/package.json
+++ b/apps/ezstack-site/package.json
@@ -10,13 +10,16 @@
     "test": "vitest --environment jsdom"
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.13",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-syntax-highlighter": "^16.0.0",
+    "refractor": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
