fully integrate billing using stripe

--- a/apps/ezstack-site/package.json
+++ b/apps/ezstack-site/package.json
@@ -19,7 +19,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-syntax-highlighter": "^16.0.0",
-    "refractor": "^5.0.0"
+    "refractor": "^5.0.0",
+    "@stripe/stripe-js": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
