Adding env var to deploy workflow

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -146,7 +146,8 @@ jobs:
           NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${{ vars.NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY }}
           
           # Stripe
-          FASTIFY_PUBLIC_STRIPE_SECRET_KEY=${{ secrets.FASTIFY_PUBLIC_STRIPE_SECRET_KEY }}  
+          FASTIFY_PUBLIC_STRIPE_SECRET_KEY=${{ secrets.FASTIFY_PUBLIC_STRIPE_SECRET_KEY }}   
+          FASTIFY_PUBLIC_STRIPE_PUBLISHABLE_KEY=${{ vars.FASTIFY_PUBLIC_STRIPE_PUBLISHABLE_KEY }}
           EOF
 
       - name: Start services for testing
