Adding npm package workflows

--- a/plugins/package.json
+++ b/plugins/package.json
@@ -23,7 +23,10 @@
   "scripts": {
     "build": "tsc -p tsconfig.json && node ./scripts/build-cjs.cjs",
     "clean": "rimraf dist",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run build",
+    "release:patch": "node ./scripts/release.cjs patch",
+    "release:minor": "node ./scripts/release.cjs minor",
+    "release:major": "node ./scripts/release.cjs major"
   },
   "dependencies": {},
   "devDependencies": {
