npm build script path fix

--- a/plugins/package.json
+++ b/plugins/package.json
@@ -10,6 +10,14 @@
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "homepage": "https://ezstack.app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zachorg/EzStack.git",
+    "directory": "plugins"
+  },
+  "bugs": {
+    "url": "https://github.com/zachorg/EzStack/issues"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.js",
