--- a/apps/ezstack/tsconfig.json
+++ b/apps/ezstack/tsconfig.json
@@ -11,6 +11,7 @@
     "noUnusedParameters": true
   },
   "include": ["src/**/*"],
+  "exclude": ["src/**/__tests__", "src/**/*.test.ts", "src/**/*.spec.ts"]
 }
 
 
